<resources>
    <string name="app_name">BrightonCollective</string>
    <string name="brighton_collective">Brighton Collective</string>
    <string name="create_account">Create account</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="homeicon">HomeIcon</string>
    <string name="search">Search</string>
    <string name="sell">Sell</string>
    <string name="messages">Messages</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_name_of_item">Enter name of item:</string>
    <string name="enter_description">Enter description:</string>
    <string name="upload_photo">Upload Photo +</string>
    <string name="_0_00">£0.00</string>
    <string name="submit">Submit</string>
    <string name="sellTitle">Sell</string>
    <string name="image_of_item">Image of Item</string>
    <string name="brighton_collectivetitle">Brighton Collective</string>
    <string name="brighton">Brighton</string>
    <string name="sussex">Sussex</string>
    <string name="brighton_and_sussex_medical_school">Brighton and Sussex Medical School</string>
    <string name="create_accounttext">Create Account</string>
    <string name="university">University:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="passwordlogin">Password</string>
    <string name="if_you_did_not_receive_this_email_please_check_your_spam_or_junk_e_mail_folder">If you did not receive this email, please check your Spam or Junk E-mail folder.</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="homedes">Home</string>
    <string name="basketdes">Basket</string>
    <string name="messagesdes">Messages</string>
    <string name="my_accountdes">My Account</string>
    <string name="searchdes">Search</string>
    <string name="checkout">Checkout</string>
    <string name="total_0_00">Total: £0.00</string>
    <string name="searchbar">Search</string>
    <string name="buy">Buy</string>
    <string name="_0_00buy">£0.00</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="verify_email">Verify Email</string>
    <string name="product_price">product_price</string>
    <string name="product_descriptionprp">product_description</string>
    <string name="product_namepro">product_name</string>
    <string name="productimage">productImage</string>
    <string name="send_verification_email">Send Verification Email</string>
    <string name="email_verified">Email Verified</string>
    <string name="enter_your_university_email">Enter your University email</string>
    <string name="search_result">Search Result</string>
    <string name="scroll">scroll</string>
    <string name="qty_and_price">Qty and Price</string>
    <string name="item_name">Item Name</string>
    <string name="app_appearance">App Appearance</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="chat">Messages</string>


</resources>