<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sellTitle"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="#D1D1D1">



            </TextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginTop="10dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/uploadPhoto"
                android:text="@string/upload_photo"
                android:layout_marginBottom="40dp"
                android:textSize="28sp"
                android:layout_marginTop="10dp"
                android:textColor="#D1D1D1"
                style="@style/myButton">

            </Button>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgView"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/image_of_item">

            </ImageView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/titleOfProduct"
                    android:autofillHints=""
                    android:textSize="24sp"
                    android:inputType="text"
                    android:textColor="#A8A8A8"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#A8A8A8"
                    android:hint="@string/enter_name_of_item"
                    >

                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/descriptionOfProduct"
                    android:autofillHints=""
                    android:textSize="24sp"
                    android:inputType="text"
                    android:textColorHint="#A8A8A8"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:hint="@string/enter_description"
                    >
                </EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/priceOfProduct"
                    android:autofillHints=""
                    android:textSize="24sp"
                    android:inputType="number"
                    android:textColorHint="#A8A8A8"
                    android:textColor="#A8A8A8"
                    android:hint="@string/_0_00"
                    >
                </EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:shadowRadius="150"
                    android:textSize="28sp"
                    android:layout_gravity="center"
                    android:id="@+id/submitButton"
                    android:textColor="#D1D1D1"
                    style="@style/myButton">

                </Button>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>