<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".SignUpVerification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="#D1D1D1">



            </TextView>


        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:hint="@string/enter_your_university_email"
            android:textColorHint="#A8A8A8"
            android:inputType="textEmailAddress"/>


        <Button
            android:id="@+id/sendVerificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/send_verification_email"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/verifyButton"
            style="@style/myButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/email_verified" />
</LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>







