<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="100"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotten_password"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="#D1D1D1">
            </TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/UserInputResetEmail"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:textColorHint="#A8A8A8"
            android:textSize="24sp"
            android:hint="Enter Email Address"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/sendPasswordResetEmail"
            style="@style/myButton"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_password_reset_email"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/CheckJunkMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_did_not_receive_this_email_please_check_your_spam_or_junk_e_mail_folder"
            android:textSize="16sp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="32dp" />


    </LinearLayout>

</RelativeLayout>


