<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/app_name"
                app:srcCompat="@android:drawable/ic_menu_revert"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="34sp"
                android:textColor="#D1D1D1">



            </TextView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_appearance"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="26sp"
                android:textColor="@color/white"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/viewMode"
                android:text=""
                android:layout_marginStart="20sp"
                >
            </TextView>

            <Switch
                android:id="@+id/switchButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:minHeight="48dp"
                android:text="@string/app_appearance"
                android:textColor="@color/white"
                tools:ignore="UseSwitchCompatOrMaterialXml">

            </Switch>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>